# Emulator-Frontend

./: CMakeLists.txt  FrontEnd.cpp  FrontEnd.h  main.cpp
Data/: Systems.json
src/: FrontEnd.cpp  FrontEnd.h  main.cpp  systems.cpp  systems.h
